fix: fixed the name of the classes, and also added photo and text to main>section-header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;600&display=swap" rel="stylesheet">
     <title>cv</title>
 </head>
 
@@ -26,6 +29,52 @@
             </nav>
         </div>
     </header>
+
+    <main class="main">
+
+        <div class="container">
+            <section class="section-profile" id="profile">
+
+                <div class="section-profile__box">
+                    <img class="section-profile__img-me" src="assets/img/photo-profile.png" alt="MyPhoto">
+                </div>
+                <div class="section-profile__box">
+                    <h1 class="section-profile__title">
+                        dmitriy tupikin
+                    </h1>
+                    <p class="section-profile__text">
+                        beginner front-end eveloper
+                    </p>
+                </div>
+            </section>
+
+            <section class="section" id="contacts">
+
+            </section>
+
+            <section class="section" id="summary">
+
+            </section>
+
+            <section class="section" id="skills">
+
+            </section>
+
+            <section class="section" id="code">
+
+
+            </section>
+
+            <section class="section" id="courses">
+
+            </section>
+        </div>
+
+    </main>
+
+    <footer class="footer">
+
+    </footer>
 
 </body>
 
