feat: added three new sections without style

--- a/index.html
+++ b/index.html
@@ -49,14 +49,42 @@
             </section>
 
             <section class="section" id="contacts">
-
+                <h2 class="section__title">
+                    contacts
+                </h2>
+                <ul class="section__list">
+                    <li class="section__list-item">
+                        Location: Batumi, Georgia
+                    </li>
+                    <li class="section__list-item">
+                        Email: dimka_tupikin@mail.ru
+                    </li>
+                    <li class="section__list-item section__list-ite">
+                        Github: dmitriygithuber
+                    </li>
+                    <li class="section__list-item">
+                        Telegram: dima_telegraman
+                    </li>
+                    <li class="section__list-item">
+                        Discord: rakomnakapot#2009
+                    </li>
+                </ul>
             </section>
 
             <section class="section" id="summary">
-
+                <h2 class="section__title">
+                    summary
+                </h2>
+                <p class="section__text">
+                    I am sociable, purposeful and responsible, I like to explore new areas of activity for myself. I
+                    have a great desire to acquire new knowledge in the IT field and develop further in it.
+                </p>
             </section>
 
             <section class="section" id="skills">
+                <h2 class="section__title">
+                    skills
+                </h2>
 
             </section>
 
