feat: added all sections to the index.html without style

--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
                     contacts
                 </h2>
                 <ul class="section__list">
-                    <li class="section__list-item">
+                    <li class="section__item">
                         Location: Batumi, Georgia
                     </li>
-                    <li class="section__list-item">
+                    <li class="section__item">
                         Email: dimka_tupikin@mail.ru
                     </li>
-                    <li class="section__list-item section__list-ite">
+                    <li class="section__item bkg">
                         Github: dmitriygithuber
                     </li>
-                    <li class="section__list-item">
-                        Telegram: dima_telegraman
+                    <li class="section__item">
+                        Telegram: @dima_telegraman
                     </li>
-                    <li class="section__list-item">
+                    <li class="section__item">
                         Discord: rakomnakapot#2009
                     </li>
                 </ul>
@@ -85,16 +85,66 @@
                 <h2 class="section__title">
                     skills
                 </h2>
+                <ul class="section__list">
+                    <li class="section__item">
+                        HTML (Basic)
+                    </li>
+                    <li class="section__item">
+                        CSS (Basic)
+                    </li>
+                    <li class="section__item">
+                        Git (Basic)
+                    </li>
+                </ul>
 
             </section>
 
             <section class="section" id="code">
-
-
+                <h2 class="section__title">
+                    code
+                </h2>
+                <pre><code>let Tc = prompt("Введите число, обозначающий градус цельсия");
+let Tf = 9 / 5;
+alert(Tf * Tc + 32 + "*С");</code></pre>
             </section>
 
             <section class="section" id="courses">
+                <h2 class="section__title">
+                    courses
+                </h2>
+                <ul class="section__list">
+                    <li class="section__item">
+                        <a href="https://wayup.in/ru/" class="section__link">WayUp</a>
+                    </li>
+                    <li class="section__item">
+                        <a href="https://gb.ru/" class="section__Link">GeekBrains</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="section" id="projects">
+                <h2 class="section__title">
+                </h2>
+                <p class="section__text">
+                    Unfortunately I don't have any projects at the moment
+                </p>
+            </section>
+            <section class="section" id="education">
+                <h2 class="section__title">
+                    education
+                </h2>
+                <p class="section__text">
+                    Moscow University of the Ministry of Internal Affairs of the Russian Federation the estates of V.Ya.
+                    Kikotya
+                </p>
+            </section>
 
+            <section class="section">
+                <h2 class="section__title">
+                    english
+                </h2>
+                <p class="section__text">
+                    A1
+                </p>
             </section>
         </div>
 
