--- a/index.html
+++ b/index.html
@@ -32,19 +32,18 @@
 
     <main class="main">
 
-        <div class="container">
-            <section class="section-profile" id="profile">
+        <div class="container main-container">
+            <section class="section section-profile" id="profile">
 
-                <div class="section-profile__box">
-                    <img class="section-profile__img-me" src="assets/img/photo-profile.png" alt="MyPhoto">
-                </div>
+                <img class="section-profile__img-me" src="assets/img/photo-profile.png" alt="MyPhoto">
                 <div class="section-profile__box">
                     <h1 class="section-profile__title">
                         dmitriy tupikin
                     </h1>
-                    <p class="section-profile__text">
+
+                    <h3 class="section-profile__subtitle">
                         beginner front-end eveloper
-                    </p>
+                    </h3>
                 </div>
             </section>
 
@@ -123,6 +122,7 @@ alert(Tf * Tc + 32 + "*С");</code></pre>
             </section>
             <section class="section" id="projects">
                 <h2 class="section__title">
+                    projects
                 </h2>
                 <p class="section__text">
                     Unfortunately I don't have any projects at the moment
