fix: fixed name section-profile__title

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </h1>
 
                     <h3 class="section-profile__subtitle">
-                        beginner front-end eveloper
+                        beginner front-end developer
                     </h3>
                 </div>
             </section>
